[package]
name = "bip351"
version = "0.3.0"
edition = "2021"
authors = ["Alfred Hodler <alfred_hodler@protonmail.com>"]
license = "MIT"
repository = "https://github.com/private-payments/rust-private-payments"
description = "Private Payments (BIP 351) Reference Implementation"
keywords = ["bitcoin"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
bitcoin = "0.29.2"
